--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,8 @@
             Box,
             Typography,
             Alert,
+            Snackbar,
+            LinearProgress,
             debounce,
         } = MaterialUI;
 
@@ -123,7 +125,7 @@
         function App() {
             const [loading, setLoading] = React.useState(false);
             const [value, setValue] = React.useState(null);
-            const [alert, setAlert] = React.useState({ message: '' });
+            const [alert, setAlert] = React.useState({ open: false, message: '', severity: 'success' });
 
             const prefersDarkMode = useMediaQuery('(prefers-color-scheme: dark)');
             const theme = React.useMemo(
@@ -152,12 +154,14 @@
                     });
 
                     setAlert({
+                        open: true,
                         message: 'Movie succesfully added',
                         severity: 'success'
                     });
                 }
                 catch (err) {
                     setAlert({
+                        open: true,
                         message: 'Unable to add movie',
                         severity: 'error'
                     });
@@ -176,12 +180,14 @@
                     });
 
                     setAlert({
+                        open: true,
                         message: 'Movies succesfully synced',
                         severity: 'success'
                     });
                 }
                 catch (err) {
                     setAlert({
+                        open: true,
                         message: 'Unable to sync movies',
                         severity: 'error'
                     });
@@ -194,6 +200,10 @@
             return (
                 <ThemeProvider theme={theme}>
                     <CssBaseline />
+                    {loading ?
+                        <LinearProgress sx={{ position: "absolute", top: 0, left: 0, right: 0 }} /> :
+                        ''
+                    }
                     <Container maxWidth="sm">
                         <Stack direction="column" spacing={2} sx={{ padding: 2 }}>
                             <Stack direction="row" spacing={2}>
@@ -201,14 +211,12 @@
                                 <Button variant="contained" size="large" onClick={submit} disabled={loading || !value}>Create</Button>
                             </Stack>
                             <Button variant="contained" size="large" color="success" onClick={sync} disabled={loading}>Sync all</Button>
-                            {alert.message ?
-                                <Alert variant="filled" severity={alert.severity} onClose={() => setAlert({ message: '' })}>
-                                    {alert.message}
-                                </Alert>
-                                :
-                                ''
-                            }
                         </Stack>
+                        <Snackbar open={alert.open} onClose={() => setAlert(p => ({ ...p, open: false }))} autoHideDuration={5000} anchorOrigin={{ horizontal: 'center', vertical: 'bottom' }}>
+                            <Alert variant="filled" severity={alert.severity} onClose={() => setAlert(p => ({ ...p, open: false }))}>
+                                {alert.message}
+                            </Alert>
+                        </Snackbar>
                     </Container>
                 </ThemeProvider>
             );
