Split frontend and backend, support notion oauth

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,229 +1,20 @@
 <!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <title>TMDB Lookup</title>
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <script src="https://unpkg.com/react@latest/umd/react.development.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/react-dom@latest/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@mui/material@latest/umd/material-ui.development.js"
-        crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@babel/standalone@latest/babel.min.js" crossorigin="anonymous"></script>
     <!-- Fonts to support Material Design -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
-    <!-- Icons to support Material Design -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-</head>
-
-<body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
+    <title>Notion - TMDB</title>
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="text/babel">
-        const {
-            useMediaQuery,
-            CssBaseline,
-            ThemeProvider,
-            Container,
-            createTheme,
-            Stack,
-            TextField,
-            Autocomplete,
-            CircularProgress,
-            Button,
-            Box,
-            Typography,
-            Alert,
-            Snackbar,
-            LinearProgress,
-            debounce,
-        } = MaterialUI;
-
-        function Asynchronous({ onMovieChange }) {
-            const [value, setValue] = React.useState(null);
-            const [inputValue, setInputValue] = React.useState('');
-            const [options, setOptions] = React.useState([]);
-
-            const fetchMovieSearch = React.useMemo(
-                () =>
-                    debounce((inputValue, done) => {
-                        fetch('/search?query=' + encodeURIComponent(inputValue))
-                            .then(res => res.json())
-                            .then(done)
-                    }, 400),
-                [],
-            );
-
-            React.useEffect(() => {
-                let active = true;
-
-                if (inputValue === '') {
-                    setOptions([]);
-
-                    return undefined;
-                }
-
-                fetchMovieSearch(inputValue, ({ results }) => {
-                    if (active) {
-                        setOptions(results);
-                    }
-                });
-
-                return () => {
-                    active = false;
-                };
-            }, [inputValue, fetchMovieSearch]);
-
-            return (
-                <Autocomplete
-                    sx={{ width: '100%' }}
-                    getOptionLabel={(option) => option.title}
-                    getOptionKey={(x) => x.id}
-                    options={options}
-                    value={value}
-                    isOptionEqualToValue={(o, v) => o.id == v.id}
-                    noOptionsText="No movie"
-                    onChange={(event, newValue) => {
-                        setValue(newValue);
-                        onMovieChange(newValue);
-                    }}
-                    onInputChange={(event, newInputValue) => {
-                        setInputValue(newInputValue);
-                    }}
-                    renderInput={(params) => (
-                        <TextField {...params} label="TMDB lookup" fullWidth />
-                    )}
-                    renderOption={(props, option) => {
-                        return (
-                            <li {...props}>
-                                <Stack direction="row" spacing={1}>
-                                    <Box
-                                        component="img"
-                                        sx={{
-                                            width: 40,
-                                            height: 60,
-                                            objectFit: 'cover',
-                                        }}
-                                        src={"https://image.tmdb.org/t/p/w500" + option.poster_path}
-                                    />
-                                    <Stack direction="column">
-                                        <Typography variant="subtitle2">{option.title}</Typography>
-                                        <Typography variant="caption">
-                                            {option.release_date.split('-')[0]}
-                                            {option.original_title != option.title ? ' - ' + option.original_title : ''}
-                                        </Typography>
-                                    </Stack>
-                                </Stack>
-                            </li>
-                        );
-                    }}
-                />
-            );
-        }
-
-        function App() {
-            const [loading, setLoading] = React.useState(false);
-            const [value, setValue] = React.useState(null);
-            const [alert, setAlert] = React.useState({ open: false, message: '', severity: 'success' });
-
-            const prefersDarkMode = useMediaQuery('(prefers-color-scheme: dark)');
-            const theme = React.useMemo(
-                () =>
-                    createTheme({
-                        palette: {
-                            mode: prefersDarkMode ? 'dark' : 'light',
-                            background: {
-                                default: prefersDarkMode ? 'rgb(25, 25, 25)' : undefined,
-                            }
-                        },
-                    }),
-                [prefersDarkMode],
-            );
-
-            async function submit() {
-                if (!value) {
-                    return;
-                }
-
-                setLoading(true);
-
-                try {
-                    await fetch('/add?id=' + value.id, {
-                        method: 'POST',
-                    });
-
-                    setAlert({
-                        open: true,
-                        message: 'Movie succesfully added',
-                        severity: 'success'
-                    });
-                }
-                catch (err) {
-                    setAlert({
-                        open: true,
-                        message: 'Unable to add movie',
-                        severity: 'error'
-                    });
-                }
-                finally {
-                    setLoading(false);
-                }
-            }
-
-            async function sync() {
-                setLoading(true);
-
-                try {
-                    await fetch('/sync', {
-                        method: 'POST',
-                    });
-
-                    setAlert({
-                        open: true,
-                        message: 'Movies succesfully synced',
-                        severity: 'success'
-                    });
-                }
-                catch (err) {
-                    setAlert({
-                        open: true,
-                        message: 'Unable to sync movies',
-                        severity: 'error'
-                    });
-                }
-                finally {
-                    setLoading(false);
-                }
-            }
-
-            return (
-                <ThemeProvider theme={theme}>
-                    <CssBaseline />
-                    {loading ?
-                        <LinearProgress sx={{ position: "absolute", top: 0, left: 0, right: 0 }} /> :
-                        ''
-                    }
-                    <Container maxWidth="sm">
-                        <Stack direction="column" spacing={2} sx={{ padding: 2 }}>
-                            <Stack direction="row" spacing={2}>
-                                <Asynchronous onMovieChange={m => setValue(m)} />
-                                <Button variant="contained" size="large" onClick={submit} disabled={loading || !value}>Create</Button>
-                            </Stack>
-                            <Button variant="contained" size="large" color="success" onClick={sync} disabled={loading}>Sync all</Button>
-                        </Stack>
-                        <Snackbar open={alert.open} onClose={() => setAlert(p => ({ ...p, open: false }))} autoHideDuration={5000} anchorOrigin={{ horizontal: 'center', vertical: 'bottom' }}>
-                            <Alert variant="filled" severity={alert.severity} onClose={() => setAlert(p => ({ ...p, open: false }))}>
-                                {alert.message}
-                            </Alert>
-                        </Snackbar>
-                    </Container>
-                </ThemeProvider>
-            );
-        }
-
-        ReactDOM.createRoot(document.getElementById('root')).render(<App />);
-    </script>
-</body>
-
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
